[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surpyval"
version = "0.11.1"
description = "A python package for survival analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Derryn Knife", email = "derryn@reliafy.com"},
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "autograd>=1.8",
    "numpy>=2.1,<3",
    "scipy",
    "pandas",
    "matplotlib>=3.10",
    "formulaic",
    "numdifftools>=0.9.42",
    "joblib",
]

[project.optional-dependencies]
tests = [
    "lifelines==0.30.0",
    "reliability==0.9.0",
    "pytest==9.0.3",
]

[project.urls]
Homepage = "https://github.com/derrynknife/SurPyval"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["datasets/*.csv", "py.typed"]

# For Black pre-commit hook
[tool.black]
line-length = 79

# So isort is compatible with black
[tool.isort]
profile = "black"
skip = ["__init__.py"]

# mypy
[tool.mypy]
[[tool.mypy.overrides]]
module = [
    'scipy.*',
    'autograd.*',
    'pandas',
    'formulaic',
    'matplotlib.*',

    'lifelines',
    'reliability',
    'sphinx_rtd_theme',
    'sklearn.*',
    'sksurv.*',
    'joblib.*',
    'surpyval.nonparametric.*',
]
ignore_missing_imports = true

# Coverage
[tool.coverage.run]
source = ["surpyval"]

# Flake8
[tool.flake8]
ignore = ['E203', 'W503', 'E741']
per-file-ignores = [
    '*/__init__.py:F401',
]
